// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Accordion (snapshot) renders single-mode accordion in closed state 1`] = `
<div
  data-orientation="vertical"
>
  <div
    class="border-b"
    data-orientation="vertical"
    data-state="closed"
  >
    <h3
      class="flex"
      data-orientation="vertical"
      data-state="closed"
    >
      <button
        aria-controls="radix-_r_1_"
        aria-expanded="false"
        class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline [&[data-state=open]>svg]:rotate-180"
        data-orientation="vertical"
        data-radix-collection-item=""
        data-state="closed"
        id="radix-_r_0_"
        type="button"
      >
        Section 1
        <svg
          class="lucide lucide-chevron-down size-4 shrink-0 transition-transform duration-200"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
    </h3>
    <div
      aria-labelledby="radix-_r_0_"
      class="overflow-hidden text-sm transition-all data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
      data-orientation="vertical"
      data-state="closed"
      hidden=""
      id="radix-_r_1_"
      role="region"
      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
    />
  </div>
</div>
`;

exports[`Accordion (snapshot) renders single-mode accordion with defaultValue open 1`] = `
<div
  data-orientation="vertical"
>
  <div
    class="border-b"
    data-orientation="vertical"
    data-state="open"
  >
    <h3
      class="flex"
      data-orientation="vertical"
      data-state="open"
    >
      <button
        aria-controls="radix-_r_3_"
        aria-expanded="true"
        class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline [&[data-state=open]>svg]:rotate-180"
        data-orientation="vertical"
        data-radix-collection-item=""
        data-state="open"
        id="radix-_r_2_"
        type="button"
      >
        Section 1
        <svg
          class="lucide lucide-chevron-down size-4 shrink-0 transition-transform duration-200"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
    </h3>
    <div
      aria-labelledby="radix-_r_2_"
      class="overflow-hidden text-sm transition-all data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
      data-orientation="vertical"
      data-state="open"
      id="radix-_r_3_"
      role="region"
      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
    >
      <div
        class="pb-4 pt-0"
      >
        Body 1
      </div>
    </div>
  </div>
  <div
    class="border-b"
    data-orientation="vertical"
    data-state="closed"
  >
    <h3
      class="flex"
      data-orientation="vertical"
      data-state="closed"
    >
      <button
        aria-controls="radix-_r_5_"
        aria-expanded="false"
        class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline [&[data-state=open]>svg]:rotate-180"
        data-orientation="vertical"
        data-radix-collection-item=""
        data-state="closed"
        id="radix-_r_4_"
        type="button"
      >
        Section 2
        <svg
          class="lucide lucide-chevron-down size-4 shrink-0 transition-transform duration-200"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
    </h3>
    <div
      aria-labelledby="radix-_r_4_"
      class="overflow-hidden text-sm transition-all data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
      data-orientation="vertical"
      data-state="closed"
      hidden=""
      id="radix-_r_5_"
      role="region"
      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
    />
  </div>
</div>
`;
